syntax = "proto3";

package Jubo.JuLiao.IM.Wx.Proto;

message GetGroupSendHistoryTaskMessage {
  string WeChatId = 1;
  int64 EndTime = 2;
  int64 TaskId = 5;
}
